// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Read Only Model Plan Summary -- Beneficiaries > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="read-only-model-plan--beneficiaries"
    data-testid="read-only-model-plan--beneficiaries"
  >
    <div
      class="display-flex flex-justify flex-align-start"
    >
      <h2
        class="margin-top-0 margin-bottom-4"
      >
        Beneficiaries
      </h2>
      <div>
        <div
          class="model-plan-task-list__task-tag line-height-body-1 text-bold mint-no-print bg-warning"
          data-testid="tasklist-tag"
        >
          <span>
            In progress
          </span>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--who-are-the-beneficiaries-of-this-model margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Who are the beneficiaries of this model?
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Disease-specific
            </li>
            <ul>
              <li
                class="font-sans-md line-height-sans-4"
              >
                Other disease group
              </li>
            </ul>
            <li
              class="font-sans-md line-height-sans-4"
            >
              Dually-eligible beneficiaries
            </li>
            <ul />
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note beneficiary
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--should-dually-eligible-beneficiaries-be-treated-differently-than-non-dually-eligibles--how-so margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Should dually-eligible beneficiaries be treated differently than non-dually eligibles? How so?
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Yes
            <span
              data-testid="other-entry"
            >
               - This is how
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Treat note
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--should-beneficiaries-with-certain-characteristics-or-enrollments-be-excluded--how-so--what-are-the-exclusionary-criteria margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Should beneficiaries with certain characteristics or enrollments be excluded? How so, what are the exclusionary criteria?
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            No
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Exclude note
          </div>
        </div>
      </div>
    </div>
    <div
      class="margin-top-4 padding-top-4 border-top-1px border-base-light"
    >
      <div
        class="grid-row grid-gap"
        data-testid="grid"
      >
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--how-many-people-do-you-think-will-be-impacted-by-this-model margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
                >
                  How many people do you think will be impacted by this model?
                </span>
              </div>
              <div
                class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                1234
              </div>
            </div>
          </div>
        </div>
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--what-is-your-level-of-confidence-on-this-estimate margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
                >
                  What is your level of confidence on this estimate?
                </span>
              </div>
              <div
                class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                Completely confident
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note of confidence
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--how-will-you-choose-beneficiaries margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              How will you choose beneficiaries?
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Historical claims
            </li>
            <ul />
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note selection
          </div>
        </div>
      </div>
    </div>
    <div
      class="margin-top-4 padding-top-4 border-top-1px border-base-light"
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--how-frequently-are-beneficiaries-added margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              How frequently are beneficiaries added?
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Other
            </li>
            <ul>
              <li
                class="font-sans-md line-height-sans-4"
              >
                Frequency other
              </li>
            </ul>
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note frequency
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--how-frequently-are-beneficiaries-removed margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              How frequently are beneficiaries removed?
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Continually
            </li>
            <ul>
              <li
                class="font-sans-md line-height-sans-4"
              >
                Frequency continually
              </li>
            </ul>
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note frequency
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--will-the-beneficiaries-overlap-with-other-models margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Will the beneficiaries overlap with other models?
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Yes, we expect to develop policies to manage the overlaps
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note overlap
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--are-there-precedence-rules-between-this-model-and-other-model-s margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Are there precedence rules between this model and other model(s)?
              <span
                class="text-normal line-height-sans-2 margin-left-1 position-relative"
              >
                <span
                  class="usa-tooltip top-2px"
                  data-testid="tooltipWrapper"
                >
                  <div
                    aria-describedby="tooltip-550000"
                    class="usa-tooltip__trigger mint-no-print"
                    data-testid="triggerElement"
                    position="right"
                    tabindex="0"
                    title=""
                    wrapperclasses="top-2px"
                  >
                    <svg
                      class="usa-icon text-base-light"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                      />
                    </svg>
                  </div>
                  <span
                    aria-hidden="true"
                    class="usa-tooltip__body"
                    data-testid="tooltipBody"
                    id="tooltip-550000"
                    role="tooltip"
                    title="i.e. other models have precedence over you (e.g. mandatory or statutory models running at the same time as yours)"
                  >
                    i.e. other models have precedence over you (e.g. mandatory or statutory models running at the same time as yours)
                  </span>
                </span>
              </span>
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Yes
            </li>
            <ul>
              <li
                class="font-sans-md line-height-sans-4"
              >
                Yes precedence rules
              </li>
            </ul>
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Precedence note
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Read Only Model Plan Summary -- Beneficiaries > matches snapshot 2`] = `
<DocumentFragment>
  <div
    class="read-only-model-plan--beneficiaries"
    data-testid="read-only-model-plan--beneficiaries"
  >
    <div
      class="display-flex flex-justify flex-align-start"
    >
      <h2
        class="margin-top-0 margin-bottom-4"
      >
        Beneficiaries
      </h2>
      <div>
        <div
          class="model-plan-task-list__task-tag line-height-body-1 text-bold mint-no-print bg-warning "
          data-testid="tasklist-tag"
        >
          <span>
            In progress
          </span>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--who-are-the-beneficiaries-of-this-model margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Who are the beneficiaries of this model?
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Disease-specific
            </li>
            <ul>
              <li
                class="font-sans-md line-height-sans-4"
              >
                Other disease group
              </li>
            </ul>
            <li
              class="font-sans-md line-height-sans-4"
            >
              Dually-eligible beneficiaries
            </li>
            <ul />
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note beneficiary
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--should-dually-eligible-beneficiaries-be-treated-differently-than-non-dually-eligibles--how-so margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Should dually-eligible beneficiaries be treated differently than non-dually eligibles? How so?
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Yes
            <span
              data-testid="other-entry"
            >
               - This is how
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Treat note
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--should-beneficiaries-with-certain-characteristics-or-enrollments-be-excluded--how-so--what-are-the-exclusionary-criteria margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Should beneficiaries with certain characteristics or enrollments be excluded? How so, what are the exclusionary criteria?
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            No
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Exclude note
          </div>
        </div>
      </div>
    </div>
    <div
      class="margin-top-4 padding-top-4 border-top-1px border-base-light"
    >
      <div
        class="grid-row grid-gap"
        data-testid="grid"
      >
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--how-many-people-do-you-think-will-be-impacted-by-this-model margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
                >
                  How many people do you think will be impacted by this model?
                </span>
              </div>
              <div
                class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                1234
              </div>
            </div>
          </div>
        </div>
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--what-is-your-level-of-confidence-on-this-estimate margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
                >
                  What is your level of confidence on this estimate?
                </span>
              </div>
              <div
                class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                Completely confident
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note of confidence
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--how-will-you-choose-beneficiaries margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              How will you choose beneficiaries?
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Historical claims
            </li>
            <ul />
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note selection
          </div>
        </div>
      </div>
    </div>
    <div
      class="margin-top-4 padding-top-4 border-top-1px border-base-light"
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--how-frequently-are-beneficiaries-added margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              How frequently are beneficiaries added?
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Other
            </li>
            <ul>
              <li
                class="font-sans-md line-height-sans-4"
              >
                Frequency other
              </li>
            </ul>
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note frequency
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--how-frequently-are-beneficiaries-removed margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              How frequently are beneficiaries removed?
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Continually
            </li>
            <ul>
              <li
                class="font-sans-md line-height-sans-4"
              >
                Frequency continually
              </li>
            </ul>
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note frequency
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--will-the-beneficiaries-overlap-with-other-models margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Will the beneficiaries overlap with other models?
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Yes, we expect to develop policies to manage the overlaps
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Note overlap
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--are-there-precedence-rules-between-this-model-and-other-model-s margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Are there precedence rules between this model and other model(s)?
              <span
                class="text-normal line-height-sans-2 margin-left-1 position-relative"
              >
                <span
                  class="usa-tooltip top-2px"
                  data-testid="tooltipWrapper"
                >
                  <div
                    aria-describedby="tooltip-550000"
                    class="usa-tooltip__trigger mint-no-print"
                    data-testid="triggerElement"
                    position="right"
                    tabindex="0"
                    title=""
                    wrapperclasses="top-2px"
                  >
                    <svg
                      class="usa-icon text-base-light"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                      />
                    </svg>
                  </div>
                  <span
                    aria-hidden="true"
                    class="usa-tooltip__body"
                    data-testid="tooltipBody"
                    id="tooltip-550000"
                    role="tooltip"
                    title="i.e. other models have precedence over you (e.g. mandatory or statutory models running at the same time as yours)"
                  >
                    i.e. other models have precedence over you (e.g. mandatory or statutory models running at the same time as yours)
                  </span>
                </span>
              </span>
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Yes
            </li>
            <ul>
              <li
                class="font-sans-md line-height-sans-4"
              >
                Yes precedence rules
              </li>
            </ul>
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 font-body-sm line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 font-body-md line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            Precedence note
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
